--- a/trifle/cli/package.json
+++ b/trifle/cli/package.json
@@ -26,7 +26,8 @@
         "log-level": "^1.1.0",
         "loglevel": "^1.8.0",
         "path": "^0.12.7",
-        "typescript": "^4.8.2"
+        "typescript": "^4.8.2",
+        "yaml": "^2.1.3"
     },
     "devDependencies": {
         "@types/clear": "^0.1.2",
