--- a/core/rust/utils/Cargo.toml
+++ b/core/rust/utils/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "mpl-utils"
-version = "0.0.3"
+version = "0.0.4"
 edition = "2021"
-description = "Metaplex core utils library"
+description = "MPL Core Utils library"
 authors = ["Metaplex Developers <dev@metaplex.com>"]
 repository = "https://github.com/metaplex-foundation/metaplex-program-library"
 license-file = "../../../LICENSE"
@@ -10,7 +10,7 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [lib]
-crate-type = ["lib"]
+crate-type = ["lib", "cdylib"]
 path = "src/lib.rs"
 
 [dependencies]
