--- a/core/rust/utils/Cargo.toml
+++ b/core/rust/utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mpl-utils"
-version = "0.0.4"
+version = "0.0.5"
 edition = "2021"
 description = "MPL Core Utils library"
 authors = ["Metaplex Developers <dev@metaplex.com>"]
@@ -20,8 +20,8 @@ arrayref = "0.3.6"
 spl-token = { version = "3.2.0", features = ["no-entrypoint"], optional = true }
 
 [features]
-spl-token = ["dep:spl-token"]
-default = ["spl-token"]
+token = ["spl-token"]
+default = ["token"]
 
 [profile.release]
 overflow-checks = true     # Enable integer overflow checks.
