--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -13,79 +13,79 @@ env:
   RUST_TOOLCHAIN: stable
 
 jobs:
-  changes:
-    name: Changes ${{ inputs.name }}
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    # Set job outputs to values from filter step
-    outputs:
-      core: ${{ steps.filter.outputs.core }}
-      package: ${{ steps.filter.outputs.package }}
-      workflow: ${{ steps.filter.outputs.workflow }}
-      action: ${{ steps.filter.outputs.action }}
-    steps:
-      - uses: actions/checkout@v2
-      # For pull requests it's not necessary to checkout the code
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          filters: |
-            core:
-              - 'core/**'
-            package:
-              - '${{ inputs.name }}/**'
-            workflow:
-              - '.github/workflows/integration-reusable.yml'
-            action:
-              - '.github/actions/integration/${{ inputs.name }}/action.yml'
-#  build-and-integration-test:
-#    name: Build and Integration Test ${{ inputs.name }}
-#    runs-on: buildjet-4vcpu-ubuntu-2004
-#    env:
-#      cache_id: program-${{ inputs.name }}
+#  changes:
+#    name: Changes ${{ inputs.name }}
+#    runs-on: ubuntu-latest
+#    timeout-minutes: 10
+#    # Set job outputs to values from filter step
+#    outputs:
+#      core: ${{ steps.filter.outputs.core }}
+#      package: ${{ steps.filter.outputs.package }}
+#      workflow: ${{ steps.filter.outputs.workflow }}
+#      action: ${{ steps.filter.outputs.action }}
+#    steps:
+#      - uses: actions/checkout@v2
+#      # For pull requests it's not necessary to checkout the code
+#      - uses: dorny/paths-filter@v2
+#        id: filter
+#        with:
+#          filters: |
+#            core:
+#              - 'core/**'
+#            package:
+#              - '${{ inputs.name }}/**'
+#            workflow:
+#              - '.github/workflows/integration-reusable.yml'
+#            action:
+#              - '.github/actions/integration/${{ inputs.name }}/action.yml'
+  build-and-integration-test:
+    name: Build and Integration Test ${{ inputs.name }}
+    runs-on: buildjet-4vcpu-ubuntu-2004
+    env:
+      cache_id: program-${{ inputs.name }}
 #    needs: changes
 #    if: ${{ needs.changes.outputs.core == 'true' ||
 #      needs.changes.outputs.package == 'true' ||
 #      needs.changes.outputs.workflow == 'true' ||
 #      needs.changes.outputs.actions == 'true'
 #      }}
-#    steps:
-#      # Setup Deps
-#      - uses: actions/checkout@v2
-#      - uses: ./.github/actions/install-linux-build-deps
-#      - uses: ./.github/actions/install-solana
-#        with:
-#          solana_version: ${{ env.SOLANA_VERSION }}
-#      - uses: ./.github/actions/install-rust
-#        with:
-#          toolchain: ${{ env.RUST_TOOLCHAIN }}
-#
-#      # Restore Cache from previous build/test
-#      - uses: actions/cache@v2
-#        with:
-#          path: |
-#            ~/.cargo/bin/
-#            ~/.cargo/registry/index/
-#            ~/.cargo/registry/cache/
-#            ~/.cargo/git/db/
-#            ./rust/target
-#          key: ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUSTC_HASH }}
-#
-#      # Build and install deps
-#      - uses: ./.github/actions/integration/${{ inputs.name }}
-#
-#      # Start local validator
-#      - name: start-local-test-validator
-#        working-directory: ./${{ inputs.name }}/js
-#        run: DEBUG=amman* yarn amman:start
-#
-#      # Run integration test
-#      - name: run-integration-test
-#        id: run_integration_test
-#        working-directory: ./${{ inputs.name }}/js
-#        run: DEBUG=mpl* yarn test
-#
-#      # Stop local validator
-#      - name: stop-local-test-validator
-#        working-directory: ./${{ inputs.name }}/js
-#        run: yarn amman:stop
+    steps:
+      # Setup Deps
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/install-linux-build-deps
+      - uses: ./.github/actions/install-solana
+        with:
+          solana_version: ${{ env.SOLANA_VERSION }}
+      - uses: ./.github/actions/install-rust
+        with:
+          toolchain: ${{ env.RUST_TOOLCHAIN }}
+
+      # Restore Cache from previous build/test
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            ./rust/target
+          key: ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUSTC_HASH }}
+
+      # Build and install deps
+      - uses: ./.github/actions/integration/${{ inputs.name }}
+
+      # Start local validator
+      - name: start-local-test-validator
+        working-directory: ./${{ inputs.name }}/js
+        run: DEBUG=amman* yarn amman:start
+
+      # Run integration test
+      - name: run-integration-test
+        id: run_integration_test
+        working-directory: ./${{ inputs.name }}/js
+        run: DEBUG=mpl* yarn test
+
+      # Stop local validator
+      - name: stop-local-test-validator
+        working-directory: ./${{ inputs.name }}/js
+        run: yarn amman:stop
