--- a/.github/workflows/integration-reusable.yml
+++ b/.github/workflows/integration-reusable.yml
@@ -13,42 +13,42 @@ env:
   RUST_TOOLCHAIN: stable
 
 jobs:
-#  changes:
-#    name: Changes ${{ inputs.name }}
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 10
-#    # Set job outputs to values from filter step
-#    outputs:
-#      core: ${{ steps.filter.outputs.core }}
-#      package: ${{ steps.filter.outputs.package }}
-#      workflow: ${{ steps.filter.outputs.workflow }}
-#      action: ${{ steps.filter.outputs.action }}
-#    steps:
-#      - uses: actions/checkout@v2
-#      # For pull requests it's not necessary to checkout the code
-#      - uses: dorny/paths-filter@v2
-#        id: filter
-#        with:
-#          filters: |
-#            core:
-#              - 'core/**'
-#            package:
-#              - '${{ inputs.name }}/**'
-#            workflow:
-#              - '.github/workflows/integration-reusable.yml'
-#            action:
-#              - '.github/actions/integration/${{ inputs.name }}/action.yml'
+  changes:
+    name: Changes ${{ inputs.name }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    # Set job outputs to values from filter step
+    outputs:
+      core: ${{ steps.filter.outputs.core }}
+      package: ${{ steps.filter.outputs.package }}
+      workflow: ${{ steps.filter.outputs.workflow }}
+      action: ${{ steps.filter.outputs.action }}
+    steps:
+      - uses: actions/checkout@v2
+      # For pull requests it's not necessary to checkout the code
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            core:
+              - 'core/**'
+            package:
+              - '${{ inputs.name }}/**'
+            workflow:
+              - '.github/workflows/integration-reusable.yml'
+            action:
+              - '.github/actions/integration/${{ inputs.name }}/action.yml'
   build-and-integration-test:
     name: Build and Integration Test ${{ inputs.name }}
     runs-on: buildjet-4vcpu-ubuntu-2004
     env:
       cache_id: program-${{ inputs.name }}
-#    needs: changes
-#    if: ${{ needs.changes.outputs.core == 'true' ||
-#      needs.changes.outputs.package == 'true' ||
-#      needs.changes.outputs.workflow == 'true' ||
-#      needs.changes.outputs.actions == 'true'
-#      }}
+    needs: changes
+    if: ${{ needs.changes.outputs.core == 'true' ||
+      needs.changes.outputs.package == 'true' ||
+      needs.changes.outputs.workflow == 'true' ||
+      needs.changes.outputs.actions == 'true'
+      }}
     steps:
       # Setup Deps
       - uses: actions/checkout@v2
@@ -72,7 +72,12 @@ jobs:
           key: ${{ env.cache_id }}-${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ env.RUSTC_HASH }}
 
       # Build and install deps
-      - uses: ./.github/actions/integration/${{ env.cache_id }}
+      - uses: ./.github/actions/integration/fixed-price-sale
+        if: ${{ inputs.name == 'fixed-price-sale' }}
+      - uses: ./.github/actions/integration/hydra
+        if: ${{ inputs.name == 'hydra' }}
+      - uses: ./.github/actions/integration/candy-machine-core
+        if: ${{ inputs.name == 'candy-machine-core }}
 
       # Start local validator
       - name: start-local-test-validator
