--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -42,26 +42,26 @@ jobs:
       name: ${{ matrix.node.name }}
 
       ${{ if eq(matrix.node.skip_test, '') }}:
-      skip_test: false
+        skip_test: false
       ${{ if ne(matrix.node.skip_test, '') }}:
-      skip_test: ${{ matrix.node.skip_test }}
+        skip_test: ${{ matrix.node.skip_test }}
 
-      ${{ if eq(matrix.node.skip_test, '') }}:
-      build_core: true
-      ${{ if ne(matrix.node.skip_test, '') }}:
-      build_core: ${{ matrix.node.build_core }}
+      ${{ if eq(matrix.node.build_core, '') }}:
+        build_core: true
+      ${{ if ne(matrix.node.build_core, '') }}:
+        build_core: ${{ matrix.node.build_core }}
 
       ${{ if eq(matrix.node.build_token_metadata, '') }}:
-      build_token_metadata: false
+        build_token_metadata: false
       ${{ if ne(matrix.node.build_token_metadata, '') }}:
-      build_token_metadata: ${{ matrix.node.build_token_metadata }}
+        build_token_metadata: ${{ matrix.node.build_token_metadata }}
 
       ${{ if eq(matrix.node.build_auction_house, '') }}:
-      build_auction_house: false
+        build_auction_house: false
       ${{ if ne(matrix.node.build_auction_house, '') }}:
-      build_auction_house: ${{ matrix.node.build_auction_house }}
+        build_auction_house: ${{ matrix.node.build_auction_house }}
 
       ${{ if eq(matrix.node.build_candy_machine, '') }}:
-      build_candy_machine: false
+        build_candy_machine: false
       ${{ if ne(matrix.node.build_candy_machine, '') }}:
-      build_candy_machine: ${{ matrix.node.build_candy_machine }}
+        build_candy_machine: ${{ matrix.node.build_candy_machine }}
